--- a/Core/Spring-000-MASTER/Spring-100-DI/Spring-110-XmlConfiguration/pom.xml
+++ b/Core/Spring-000-MASTER/Spring-100-DI/Spring-110-XmlConfiguration/pom.xml
@@ -5,6 +5,14 @@
     <artifactId>Spring-100-DI</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <mysql.driver>8.0.17</mysql.driver>
+    </properties>
+
   <artifactId>Spring-110-XmlConfiguration</artifactId>
   <dependencies>
   	<dependency>
@@ -12,5 +20,19 @@
   		<artifactId>Spring-105-Common</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>${mysql.driver}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-dbcp2</artifactId>
+          <version>2.1</version>
+      </dependency>
+
+
   </dependencies>
 </project>
